--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -7,12 +7,15 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tv"
+        android:layout_width="200dp"
+        android:background="#f00"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:lineSpacingExtra="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hello World!Hello World!Hello World!Hello World!Hello World!Hello World!Hello World!\n123456777343453453" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
