--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -9,13 +9,21 @@
     <TextView
         android:id="@+id/tv"
         android:layout_width="200dp"
-        android:background="#f00"
         android:layout_height="wrap_content"
+        android:background="#f00"
         android:lineSpacingExtra="22dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Hello World!Hello World!Hello World!Hello World!Hello World!Hello World!Hello World!\n123456777343453453" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:background="#00f"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
